--- a/TP1/TP1/styles.css
+++ b/TP1/TP1/styles.css
@@ -19,4 +19,9 @@ body
     width: 600px; 
     margin: auto;
     padding: 32px;
+    font-family: 'sans-serif';
+}
+.LEGO{
+    font-style: italic;
+    color: #007bff;
 }
