--- a/TP1/TP1/styles.css
+++ b/TP1/TP1/styles.css
@@ -1,8 +1,11 @@
-table,
-td {
-    border: 1px solid #333;
+table{
+    border: 3px solid;
+    border-collapse: collapse;
+    text-align: center;
 }
-
+td,th{
+    border: 1px solid;
+}
 thead,
 tfoot {
     background-color: #fff;
@@ -19,7 +22,7 @@ body
     width: 600px; 
     margin: auto;
     padding: 32px;
-    font-family: 'sans-serif';
+    font-family: sans-serif;
     text-align: justify;
 }
 .LEGO{
